--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.open-in-view=false
 
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/taskr
+spring.datasource.username=postgres
+spring.datasource.password=123456
+
+spring.thymeleaf.suffix=.html
