--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.username=postgres
 spring.datasource.password=123456
 
 spring.thymeleaf.suffix=.html
+
+server.error.include-stacktrace=always
+
+taskr.entityId=evil:inc:taskr
+taskr.entityBaseUrl=http://localhost:8080
